# ITKLearning

./: CMakeLists.txt
src/: CMakeLists.txt
src/allTypesConvertToNRRD/: CMakeLists.txt  allTypesConvertToNRRD.cpp  readMe.md
src/itkImagePointer/: CMakeLists.txt  itkImagePointer.cpp
